# casper-integrations-ucase-1

./: .gitignore  README.md
contracts/: Cargo.toml  Makefile  README.md
contracts/associate-registrar/: Cargo.toml
contracts/associate-registrar/src/: associates.rs  error.rs  main.rs
contracts/document-notarizer/: Cargo.toml
contracts/document-notarizer/src/: associate_type.rs  documents.rs  error.rs  main.rs
contracts/test-contracts/: Cargo.toml
contracts/test-contracts/src/: get_document_meta.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: contract_system.rs  lib.rs  tests.rs
docs/: workflow.md
