[package]
name = "test-contracts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.3"
casper-types = "1.3.3"

[[bin]]
name = "get_document_meta"
path = "src/get_document_meta.rs"
bench = false
doctest = false
test = false
[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]